fix: word-wrap

--- a/client/src/application/main/components/movie-page/movie-content/movie-content.scss
+++ b/client/src/application/main/components/movie-page/movie-content/movie-content.scss
@@ -150,7 +150,8 @@
   &__text {
     color: #333;
     height: 500px;
-    overflow: hidden;
+    word-wrap: break-word;
+    // overflow: hidden;
     padding: 20px;
     text-align: left;
     transition: .3s;
